--- a/kartwheel/app/src/main/res/layout/view_holder_race_summary.xml
+++ b/kartwheel/app/src/main/res/layout/view_holder_race_summary.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     tools:parentTag="RelativeLayout">
 
-    <TextView
+    <us.handstand.kartwheel.layout.KartTextView
         android:id="@+id/startTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -37,20 +37,20 @@
         android:orientation="vertical"
         android:padding="16dp">
 
-        <TextView
+        <us.handstand.kartwheel.layout.KartTextView
             android:id="@+id/raceName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="16dp"
             tools:text="#1 - Final race!" />
 
-        <TextView
+        <us.handstand.kartwheel.layout.KartTextView
             android:id="@+id/raceDetails"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="1 lap | 0.5 miles" />
 
-        <TextView
+        <us.handstand.kartwheel.layout.KartTextView
             android:id="@+id/spotsLeft"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
