--- a/kartwheel/app/src/main/res/layout/activity_ticket.xml
+++ b/kartwheel/app/src/main/res/layout/activity_ticket.xml
@@ -17,7 +17,7 @@
             android:layout_alignParentLeft="true"
             android:src="@drawable/launch" />
 
-        <TextView
+        <us.handstand.kartwheel.layout.KartTextView
             android:id="@+id/title_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -26,8 +26,8 @@
             android:text="@string/app_name"
             android:textAllCaps="true"
             android:textColor="@color/red"
-            android:textSize="32dp"
-            android:textStyle="bold" />
+            android:textSize="34dp"
+            app:typeface="zamenhof" />
     </RelativeLayout>
 
     <FrameLayout
@@ -37,15 +37,21 @@
         android:layout_above="@+id/button"
         android:layout_below="@+id/title" />
 
-    <android.support.v7.widget.AppCompatButton
+    <us.handstand.kartwheel.layout.KartButton
         android:id="@+id/button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:layout_marginBottom="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:background="@drawable/button_long"
         android:enabled="false"
         android:padding="16dp"
         android:text="@string/scroll_down"
         android:textAllCaps="true"
         android:textColor="@android:color/white"
-        app:backgroundTint="@color/grey_button_disabled" />
+        android:textSize="34dp"
+        app:backgroundTint="@color/grey_button_disabled"
+        app:typeface="zamenhof" />
 </RelativeLayout>
