--- a/kartwheel/app/src/main/res/layout/fragment_crit_info.xml
+++ b/kartwheel/app/src/main/res/layout/fragment_crit_info.xml
@@ -2,9 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginBottom="16dp"
     android:orientation="vertical">
 
-    <TextView
+    <us.handstand.kartwheel.layout.KartTextView
         style="@style/TicketContentTitleStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -19,7 +20,7 @@
         android:orientation="vertical"
         android:padding="16dp">
 
-        <TextView
+        <us.handstand.kartwheel.layout.KartTextView
             android:id="@+id/critical_information_question"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
