--- a/kartwheel/app/src/main/res/layout/fragment_mini_game_type.xml
+++ b/kartwheel/app/src/main/res/layout/fragment_mini_game_type.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <!--TODO: Use ItemDecorations for the title to make this not terrible looking-->
-    <TextView
+    <us.handstand.kartwheel.layout.KartTextView
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
