--- a/kartwheel/app/src/main/res/layout/fragment_tos.xml
+++ b/kartwheel/app/src/main/res/layout/fragment_tos.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true" />
 
-    <TextView
+    <us.handstand.kartwheel.layout.KartTextView
         android:id="@+id/title"
         style="@style/TicketContentTitleStyle"
         android:layout_width="wrap_content"
@@ -28,7 +28,7 @@
         android:layout_below="@+id/title"
         android:elevation="5dp">
 
-        <TextView
+        <us.handstand.kartwheel.layout.KartTextView
             android:id="@+id/tos"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
