--- a/kartwheel/app/src/main/res/layout/item_view.xml
+++ b/kartwheel/app/src/main/res/layout/item_view.xml
@@ -9,7 +9,7 @@
         android:layout_marginRight="16dp"
         tools:src="@drawable/item_shell_red" />
 
-    <TextView
+    <us.handstand.kartwheel.layout.KartTextView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -17,10 +17,10 @@
         android:layout_marginBottom="8dp"
         android:layout_toRightOf="@+id/image"
         android:textSize="16dp"
-        android:textStyle="bold"
+        app:typeface="bold"
         tools:text="@string/acorn" />
 
-    <TextView
+    <us.handstand.kartwheel.layout.KartTextView
         android:id="@+id/description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
