--- a/kartwheel/app/src/main/res/layout/view_battery_warning.xml
+++ b/kartwheel/app/src/main/res/layout/view_battery_warning.xml
@@ -8,7 +8,7 @@
     android:gravity="center_horizontal"
     tools:parentTag="LinearLayout">
 
-    <TextView
+    <us.handstand.kartwheel.layout.KartTextView
         android:id="@+id/batteryPercentage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -20,7 +20,7 @@
         android:textSize="15dp"
         tools:text="100%" />
 
-    <TextView
+    <us.handstand.kartwheel.layout.KartTextView
         android:id="@+id/batteryDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
