--- a/kartwheel/app/src/main/res/layout/fragment_onboarding_pick_buddy.xml
+++ b/kartwheel/app/src/main/res/layout/fragment_onboarding_pick_buddy.xml
@@ -6,15 +6,20 @@
     android:gravity="center_horizontal"
     android:orientation="vertical">
 
-    <us.handstand.kartwheel.layout.CircularImageView
-        android:id="@+id/image"
+    <FrameLayout
         android:layout_width="175dp"
         android:layout_height="175dp"
-        android:layout_gravity="center"
-        android:background="@drawable/background_white_circle"
-        android:minHeight="175dp"
-        android:minWidth="175dp"
-        android:src="@drawable/onboarding_camera" />
+        android:background="@drawable/background_white_circle">
+
+        <us.handstand.kartwheel.layout.CircularImageView
+            android:id="@+id/image"
+            android:layout_width="125dp"
+            android:layout_height="125dp"
+            android:layout_gravity="center"
+            android:minHeight="175dp"
+            android:minWidth="175dp"
+            android:src="@drawable/onboarding_camera" />
+    </FrameLayout>
 
     <us.handstand.kartwheel.layout.KartTextView
         android:id="@+id/imageText"
