--- a/kartwheel/app/src/main/res/layout/recycler_view_item_buddy.xml
+++ b/kartwheel/app/src/main/res/layout/recycler_view_item_buddy.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="10dp"
-    android:layout_weight="1">
+    android:layout_width="wrap_content"
+    android:layout_height="120dp"
+    android:layout_gravity="center">
 
     <us.handstand.kartwheel.layout.SimpleGlideImageView
         android:id="@+id/buddy"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_gravity="center" />
 </FrameLayout>
