--- a/kartwheel/app/src/main/res/values/colors.xml
+++ b/kartwheel/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="yellow_40">#28FFC000</color>
     <color name="textLightGrey">#E1E1E1</color>
     <color name="textLightGrey_40">#28E1E1E1</color>
+    <color name="textLightGrey_40p">#4AE1E1E1</color>
     <color name="textDarkGrey">#8C8C8C</color>
     <color name="textDarkestGrey">#4A4A4A</color>
     <color name="white_40">#DDFFFFFF</color>
