--- a/kartwheel/app/src/main/res/layout/fragment_code_entry.xml
+++ b/kartwheel/app/src/main/res/layout/fragment_code_entry.xml
@@ -7,14 +7,11 @@
     android:orientation="vertical">
 
     <us.handstand.kartwheel.layout.KartTextView
+        style="@style/TicketContentTitleStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:text="@string/enter_code"
-        android:textAllCaps="true"
-        android:textColor="@color/red"
-        android:textSize="20dp"
-        android:textStyle="bold" />
+        android:text="@string/enter_code" />
 
     <FrameLayout
         android:layout_width="match_parent"
