--- a/kartwheel/app/src/main/res/layout/fragment_tos.xml
+++ b/kartwheel/app/src/main/res/layout/fragment_tos.xml
@@ -1,24 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_tos"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/activity_vertical_margin"
     tools:context="us.handstand.kartwheel.activity.TicketActivity">
-
-    <ImageView
-        android:id="@+id/logo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true" />
 
     <us.handstand.kartwheel.layout.KartTextView
         android:id="@+id/title"
         style="@style/TicketContentTitleStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/logo"
+        android:layout_alignParentTop="true"
+        android:layout_marginBottom="0dp"
+        android:layout_marginTop="16dp"
         android:text="@string/tos" />
 
     <us.handstand.kartwheel.layout.TOSScrollView
@@ -26,7 +22,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/title"
-        android:elevation="5dp">
+        android:layout_margin="16dp"
+        android:background="@drawable/button_round"
+        android:elevation="5dp"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp">
 
         <us.handstand.kartwheel.layout.KartTextView
             android:id="@+id/tos"
