--- a/kartwheel/app/src/main/res/layout/fragment_ticket_crit_info.xml
+++ b/kartwheel/app/src/main/res/layout/fragment_ticket_crit_info.xml
@@ -26,27 +26,42 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="16dp"
-            android:text="@string/pancakes_waffles" />
+            android:text="@string/pancakes_waffles"
+            android:textSize="17dp" />
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:layout_marginTop="16dp"
             android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/left_image"
-                android:layout_width="wrap_content"
+            <FrameLayout
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:src="@drawable/pancakes" />
+                android:layout_weight="1">
 
-            <ImageView
-                android:id="@+id/right_image"
-                android:layout_width="wrap_content"
+                <ImageView
+                    android:id="@+id/left_image"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:src="@drawable/pancakes" />
+            </FrameLayout>
+
+            <FrameLayout
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:src="@drawable/waffles" />
-        </RelativeLayout>
+                android:layout_weight="1">
+
+                <ImageView
+                    android:id="@+id/right_image"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:src="@drawable/waffles" />
+            </FrameLayout>
+        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
