--- a/kartwheel/app/src/main/res/layout/fragment_ticket_crit_info.xml
+++ b/kartwheel/app/src/main/res/layout/fragment_ticket_crit_info.xml
@@ -16,7 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:background="@android:color/white"
+        android:background="@drawable/button_round"
         android:elevation="5dp"
         android:padding="16dp" />
 </LinearLayout>
