Added background to LaunchActivity (not sure it matters since db access is quick enough to load the next activity before the system can draw)

--- a/kartwheel/app/src/main/res/layout/activity_launch.xml
+++ b/kartwheel/app/src/main/res/layout/activity_launch.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/parent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white">
 
-    <us.handstand.kartwheel.layout.KartTextView
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="Launched" />
+        android:src="@drawable/shoe_banana_header" />
 </FrameLayout>
