--- a/kartwheel/app/src/main/res/layout/recycler_view_holder_registrant_avatar.xml
+++ b/kartwheel/app/src/main/res/layout/recycler_view_holder_registrant_avatar.xml
@@ -2,4 +2,5 @@
 <us.handstand.kartwheel.layout.CircularImageView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="40dp"
     android:layout_height="40dp"
-    android:layout_margin="10dp" />
+    android:layout_margin="10dp"
+    android:src="@drawable/placeholder_registrant_avatar" />
