--- a/kartwheel/app/src/main/res/layout/activity_logged_in.xml
+++ b/kartwheel/app/src/main/res/layout/activity_logged_in.xml
@@ -2,15 +2,16 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/loggedInParent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/blue_background"
     tools:context="us.handstand.kartwheel.activity.LoggedInActivity">
 
     <android.support.v4.view.ViewPager
         android:id="@+id/pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/blue_background">
+        android:layout_height="match_parent">
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tabLayout"
