--- a/kartwheel/app/src/main/res/layout/fragment_ticket_crit_info.xml
+++ b/kartwheel/app/src/main/res/layout/fragment_ticket_crit_info.xml
@@ -18,5 +18,7 @@
         android:layout_margin="16dp"
         android:background="@drawable/button_round"
         android:elevation="5dp"
-        android:padding="16dp" />
+        android:paddingBottom="16dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp" />
 </LinearLayout>
