--- a/kartwheel/app/src/main/res/layout/view_crit_info.xml
+++ b/kartwheel/app/src/main/res/layout/view_crit_info.xml
@@ -13,6 +13,7 @@
         android:layout_centerHorizontal="true"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="32dp"
+        android:layout_marginTop="16dp"
         android:text="@string/pancakes_waffles"
         android:textSize="17dp"
         android:visibility="visible" />
