--- a/kartwheel/app/src/main/res/layout/activity_launch.xml
+++ b/kartwheel/app/src/main/res/layout/activity_launch.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/parent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,4 +10,4 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:src="@drawable/shoe_banana_header" />
-</FrameLayout>
+</android.support.design.widget.CoordinatorLayout>
