--- a/kartwheel/app/src/main/res/layout/activity_onboarding.xml
+++ b/kartwheel/app/src/main/res/layout/activity_onboarding.xml
@@ -2,7 +2,7 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/coordinatorLayout"
+    android:id="@+id/parent"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -76,8 +76,8 @@
             android:textAllCaps="true"
             android:textColor="@color/blue"
             android:textSize="34dp"
-            app:loadingSpinnerColor="@color/blue"
             app:backgroundTint="@android:color/white"
+            app:loadingSpinnerColor="@color/blue"
             app:typeface="zamenhof"
             tools:text="@string/onboarding_pick_buddy_button" />
 
