--- a/kartwheel/app/src/main/res/layout/activity_race_sign_up.xml
+++ b/kartwheel/app/src/main/res/layout/activity_race_sign_up.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/parent"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -11,4 +12,4 @@
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         tools:layout="@layout/fragment_race_sign_up" />
-</RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
