--- a/kartwheel/app/src/main/res/layout/activity_ticket.xml
+++ b/kartwheel/app/src/main/res/layout/activity_ticket.xml
@@ -1,57 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/parent"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <RelativeLayout
-        android:id="@+id/title"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp">
+        android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/logo"
-            android:layout_width="128dp"
-            android:layout_height="128dp"
-            android:layout_alignParentLeft="true"
-            android:src="@drawable/launch" />
-
-        <us.handstand.kartwheel.layout.KartTextView
-            android:id="@+id/title_text"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:id="@+id/title"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_toRightOf="@+id/logo"
-            android:text="@string/app_name"
+            android:layout_margin="16dp">
+
+            <ImageView
+                android:id="@+id/logo"
+                android:layout_width="128dp"
+                android:layout_height="128dp"
+                android:layout_alignParentLeft="true"
+                android:src="@drawable/launch" />
+
+            <us.handstand.kartwheel.layout.KartTextView
+                android:id="@+id/title_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@+id/logo"
+                android:text="@string/app_name"
+                android:textAllCaps="true"
+                android:textColor="@color/red"
+                android:textSize="34dp"
+                app:typeface="zamenhof" />
+        </RelativeLayout>
+
+        <FrameLayout
+            android:id="@+id/fragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_above="@+id/button"
+            android:layout_below="@+id/title" />
+
+        <us.handstand.kartwheel.layout.KartButton
+            android:id="@+id/button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:enabled="false"
+            android:padding="16dp"
+            android:text="@string/scroll_down"
             android:textAllCaps="true"
-            android:textColor="@color/red"
+            android:textColor="@android:color/white"
             android:textSize="34dp"
+            app:backgroundTint="@color/grey_button_disabled"
             app:typeface="zamenhof" />
     </RelativeLayout>
-
-    <FrameLayout
-        android:id="@+id/fragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/button"
-        android:layout_below="@+id/title" />
-
-    <us.handstand.kartwheel.layout.KartButton
-        android:id="@+id/button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:enabled="false"
-        android:padding="16dp"
-        android:text="@string/scroll_down"
-        android:textAllCaps="true"
-        android:textColor="@android:color/white"
-        android:textSize="34dp"
-        app:backgroundTint="@color/grey_button_disabled"
-        app:typeface="zamenhof" />
-</RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
