--- a/kartwheel/app/src/main/res/layout/view_battery_warning.xml
+++ b/kartwheel/app/src/main/res/layout/view_battery_warning.xml
@@ -6,7 +6,7 @@
     android:padding="8dp"
     tools:orientation="horizontal"
     android:gravity="center_horizontal"
-    tools:parentTag="LinearLayout">
+    tools:parentTag="android.widget.LinearLayout">
 
     <us.handstand.kartwheel.layout.KartTextView
         android:id="@+id/batteryPercentage"
